# conan-examples

./: .gitignore  LICENSE  Readme.md
multi_lib_single_conanfile/: CMakeLists.txt  cleanfiles.sh  conanfile.py
multi_lib_single_conanfile/.cmake/api/v1/reply/: cache-v2-b06e725fb820b0745862.json  cmakeFiles-v1-ceaaa2f3b18521cce031.json  codemodel-v2-a9315bc72e86fad8e85d.json  index-2023-10-12T17-39-55-0812.json  target-bar-Release-faf6928a5ba221a96af9.json  target-common-Release-a78c71ae307fe5778631.json  target-foo-Release-123764ff48453e30332f.json
multi_lib_single_conanfile/base_conan/: conanfile.py
multi_lib_single_conanfile/libbar/: CMakeLists.txt
multi_lib_single_conanfile/libbar/include/: bar.h
multi_lib_single_conanfile/libbar/src/: bar.cpp
multi_lib_single_conanfile/libcommon/: CMakeLists.txt
multi_lib_single_conanfile/libcommon/include/: common.h
multi_lib_single_conanfile/libcommon/src/: common.cpp
multi_lib_single_conanfile/libfoo/: CMakeLists.txt
multi_lib_single_conanfile/libfoo/include/: foo.h
multi_lib_single_conanfile/libfoo/src/: foo.cpp
multi_lib_single_conanfile/test_package/: CMakeLists.txt  conanfile.py  main.cpp
my_conan_tools/: conanfile.py
test_app/: CMakeLists.txt  cleanfiles.sh  conanfile.py
